Add initial papers.html file with layout and content for technical papers

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <nav class="nav container">
         <a href="#top" class="brand">MN</a>
         <ul class="nav-links">
+          <li><a href="papers.html">Papers</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
