Add videos.html for showcasing featured video content by Mansoor Nathani

--- a/papers.html
+++ b/papers.html
@@ -21,6 +21,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="#papers">Papers</a></li>
+          <li><a href="videos.html">Videos</a></li>
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
         <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark and light mode" title="Toggle theme">☀️</button>
@@ -49,6 +50,12 @@
             <a href="BGP_and_SS7_Explained.pdf" target="_blank" rel="noreferrer">
               <span class="paper-title">BGP and SS7 Explained</span>
               <span class="paper-meta">PDF · Networking</span>
+            </a>
+          </li>
+          <li class="paper-item">
+            <a href="Routing_Protocols_Guide.pdf" target="_blank" rel="noreferrer">
+              <span class="paper-title">Routing Protocols Guide</span>
+              <span class="paper-meta">PDF · Routing</span>
             </a>
           </li>
         </ul>
