--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="#top" class="brand">MN</a>
         <ul class="nav-links">
           <li><a href="papers.html">Papers</a></li>
+          <li><a href="videos.html">Videos</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
