Refactor code structure for improved readability and maintainability

--- a/papers.html
+++ b/papers.html
@@ -58,6 +58,18 @@
               <span class="paper-meta">PDF · Routing</span>
             </a>
           </li>
+          <li class="paper-item">
+            <a href="firewall_paper.pdf" target="_blank" rel="noreferrer">
+              <span class="paper-title">Firewall Paper</span>
+              <span class="paper-meta">PDF · Security</span>
+            </a>
+          </li>
+          <li class="paper-item">
+            <a href="firewall_paper_second_edition.pdf" target="_blank" rel="noreferrer">
+              <span class="paper-title">Firewall Paper (Second Edition)</span>
+              <span class="paper-meta">PDF · Security</span>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
