Refactor code structure for improved readability and maintainability

--- a/papers.html
+++ b/papers.html
@@ -70,6 +70,18 @@
               <span class="paper-meta">PDF · Security</span>
             </a>
           </li>
+          <li class="paper-item">
+            <a href="Firewall_Guide.pdf" target="_blank" rel="noreferrer">
+              <span class="paper-title">Firewall Guide</span>
+              <span class="paper-meta">PDF · Security</span>
+            </a>
+          </li>
+          <li class="paper-item">
+            <a href="firewall_paper_nontechnical_comprehensive.pdf" target="_blank" rel="noreferrer">
+              <span class="paper-title">Firewall Paper (Nontechnical Comprehensive)</span>
+              <span class="paper-meta">PDF · Security</span>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
